sfSandBoxCode/force-app/main/default/objects/Case_Activity_Week__c/Case_Activity_Week__c.object-meta.xml
<CustomObject>
    <description>Custom object to capture weekly progress on cases</description>
    <label>Case Activity Week</label>
    <nameField>
        <label>Case Activity Week Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Activity Week</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>