sfSandBoxCode/force-app/main/default/objects/Case_Activity_Week__c/fields/Case_Activity_Week__c.field-meta.xml
<CustomField>
    <fullName>Case_Activity_Week__c</fullName>
    <formula>&quot;Week of &quot; + TEXT( DATEVALUE(CreatedDate)-8)</formula>
    <label>Case Activity Week</label>
    <type>Text</type>
</CustomField>