sfSandBoxCode/force-app/main/default/objects/Case_Activity_Week__c/fields/Cases_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Cases_Escalated__c</fullName>
    <label>Cases Escalated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>