sfSandBoxCode/force-app/main/default/objects/Case_Activity_Week__c/fields/Cases_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Cases_In_Progress__c</fullName>
    <label>Cases In Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>