sfSandBoxCode/force-app/main/default/objects/Case_Activity_Week__c/fields/Cases_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Cases_On_Hold__c</fullName>
    <label>Cases On Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>