sfSandBoxCode/force-app/main/default/objects/Case_Activity_Week__c/fields/Cases_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Cases_Overdue__c</fullName>
    <label>Cases Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>