sfSandBoxCode/force-app/main/default/objects/Case_Activity_Week__c/fields/Cases_Ready_for_Verification__c.field-meta.xml
<CustomField>
    <fullName>Cases_Ready_for_Verification__c</fullName>
    <label>Cases Ready for Verification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>