sfSandBoxCode/force-app/main/default/objects/Case_Activity_Week__c/fields/Cases_Returned_to_Engineering__c.field-meta.xml
<CustomField>
    <fullName>Cases_Returned_to_Engineering__c</fullName>
    <label>Cases Returned to Engineering</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>