sfSandBoxCode/force-app/main/default/objects/Case_Activity_Week__c/fields/New_Cases_Opened__c.field-meta.xml
<CustomField>
    <fullName>New_Cases_Opened__c</fullName>
    <label>New Cases Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>